
What's new in version 0.8.4

* Add support for "steal"/guest CPU time measurement
  in virtualization environments
* Expand and collapse subtrees using '+' and '-' when in tree-view
* Show custom thread names
  (thanks to Anders Torger)
* Add support for STARTTIME field
* Upgrade PLPA to version 1.3.2
* Fix license terms with regard to PLPA
  (thanks to Tom Callaway)
* getopt-based long options and --no-color
  (thanks to Vincent Launchbury)
* BUGFIX: Fix display of nan% in CPU meters
  (thanks to Steven Hampson)
* BUGFIX: Fix memory leak
  (thanks to Pavol Rusnak)
* Add Bash/emacs style navigation keys
  (thanks to Daniel Schuler)

What's new in version 0.8.3

* BUGFIX: Fix crash on F6 key
  (thanks to Rainer Suhm)
* BUGFIX: Fix a minor bug which affected the build process.

What's new in version 0.8.2

* Integrated lsof (press 'l')
* Fix display of gigabyte-sized values
  (thanks to Andika Triwidada)
* Option to display hostname in the meters area
* Rename VEID to CTID in OpenVZ systems
  (thanks to Thorsten Schifferdecker)
* Corrections to the desktop entry file
  (thanks by Samuli Suominen)
* BUGFIX: Correct page size calculation for FreeBSD systems
  (thanks to Andrew Paulsen)
* Allow compilation without PLPA on systems that don't support it
  (thanks to Timothy Redaelli)
* BUGFIX: Fix missing tree view when userland threads are hidden
  (thanks to Josh Stone)
* BUGFIX: Fix for VPID on OpenVZ systems
  (thanks to Wolfgang Frisch)

What's new in version 0.8.1

* Linux-VServer support
  (thanks to Jonathan Sambrook and Benedikt Bohm)
* Battery meter
  (thanks to Ian Page Hands)
* BUGFIX: Fix collection of IO stats in multithreaded processes
  (thanks to Gerhard Heift)
* Remove assertion that fails on hardened kernels
  (thanks to Wolfram Schlich for the report)

What's new in version 0.8

* Ability to change sort column with the mouse by
  clicking column titles (click again to invert order)
* Add support for Linux per-process IO statistics,